--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Israel Cruz</h1>
-      <p>I'm <span class="typed" data-typed-items="programmer student, Python lover ❤️"></span></p>
+      <p>I'm <span class="typed" data-typed-items="programmer student, a Python lover ❤️"></span></p>
       <div class="social-links">
         <a href="https://github.com/israel-cruz" class="github"><i class="bx bxl-github"></i></a>
         <a href="http://www.linkedin.com/in/israel-cr" class="linkedin"><i class="bx bxl-linkedin"></i></a>
