--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Israel Cruz</h1>
-      <p>I'm <span class="typed" data-typed-items="programmer student, a Python lover ❤️"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a student programmer, a Python lover ❤️"></span></p>
       <div class="social-links">
         <a href="https://github.com/israel-cruz" class="github"><i class="bx bxl-github"></i></a>
         <a href="http://www.linkedin.com/in/israel-cr" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -83,7 +83,7 @@
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content">
             <h3>Python programmer</h3>
-            <p>Hi there! My name is <strong>Israel Cruz</strong> and I am a programmer student with a deep love for Python programming. I have a strong foundation in computer science concepts and I am constantly seeking opportunities to learn and grow as a developer. Currently, I am studying Django Framework. I have completed many Django courses and worked on some dummy projects that have helped me develop my skills. I am also open to learn new technologies and programming languages. I am excited to apply my skills and knowledge to real projects. When I'm not coding, you can find me playing chess online, reading manga or watching Netflix. Thank you for visiting my page!</p>
+            <p>Hi there! My name is <strong>Israel Cruz</strong> and I am a student programmer with a deep love for Python programming. I have a strong foundation in computer science concepts and I am constantly seeking opportunities to learn and grow as a developer. Currently, I am studying Django Framework. I have completed many Django courses and worked on some dummy projects that have helped me develop my skills. I am also open to learn new technologies and programming languages. I am excited to apply my skills and knowledge to real projects. When I'm not coding, you can find me playing chess online, reading manga or watching Netflix. Thank you for visiting my page!</p>
           </div>
         </div>
 
